# Turing-Machine

./: CMakeLists.txt  README.md
cases/: case1.tm  case2.tm
turing-project/: main.cpp  turing.cbp  turing.depend  turing.layout
turing-project/include/: PaperTape.h  TuringMachine.h  TuringMachineAdapter.h
turing-project/src/: PaperTape.cpp  TuringMachine.cpp  TuringMachineAdapter.cpp
